--- a/package.json
+++ b/package.json
@@ -3,15 +3,23 @@
   "version": "1.0.0",
   "private": true,
   "description": "Publish your JetBrains extensions / plugins to the marketplace with ease!",
-  "main": "lib/main.js",
+  "exports": {
+    ".": "./dist/index.js"
+  },
   "scripts": {
-    "build": "tsc",
-    "format": "prettier --write ./src/**/*.ts",
-    "format-check": "prettier --check ./src/**/*.ts",
-    "lint": "eslint ./src/**/*.ts",
-    "package": "ncc build ./src/main.ts",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "bundle": "npm run format:write && npm run package",
+    "ci-test": "npx jest",
+    "coverage": "npx make-coverage-badge --output-path ./badges/coverage.svg",
+    "format:write": "npx prettier --write .",
+    "format:check": "npx prettier --check .",
+    "lint": "npx eslint . -c ./.github/linters/.eslintrc.yml",
+    "package": "npx ncc build src/index.ts -o dist --source-map --license licenses.txt",
+    "package:watch": "npm run package -- --watch",
+    "test": "npx jest",
+    "all": "npm run format:write && npm run lint && npm run test && npm run coverage && npm run package"
+  },
+  "engines": {
+    "node": ">=21"
   },
   "repository": {
     "type": "git",
@@ -40,5 +48,34 @@
     "prettier": "3.3.3",
     "ts-jest": "^27.1.2",
     "typescript": "^4.4.4"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
   }
 }
